log
Wed 24 Apr 2024 09:42:17 PM UTC: 
 tests:  0|6
total_score: 0/70
603caae
Wed 24 Apr 2024 09:56:31 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   44 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
2fd1f95
